# Logger

./: CMakeLists.txt  README.md  compile.bat  compile.sh
clog/: README.md  compile.sh  glog.c  glog.h  main.c
include/: logger.h  logger.hpp
src/: main.cc
